hotfix: fixing white space overflow that prevents page from occupying 100% height

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,11 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  /* overflow-y: hidden; */
+}
+
+html, body {
+    height: 100%;
 }
 html {
   scroll-behavior: smooth;
